--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                     <span>Email</span>
                 </div>
                 <div class="inputBox">
+                    <textarea required="required" name="subject"></textarea>
+                    <span>Temat wiadomości:</span>
+                </div>
+                <div class="inputBox">
                     <textarea required="required" name="message"></textarea>
                     <span>Treśc wiadomości:</span>
                 </div>
